view responses button on lecture-makequestions page linked

--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -28,7 +28,7 @@
 		<ul class="student-list" >
 			<!-- Place PHP here, for each question in db, create a <li> element -->
           <span id="openedQuestions"></span>
-			<a href="drawing-app.html"><li> <span> Question Available! </span></li></a>
+			<!--<a href="drawing-app.html"><li> <span> Question Available! </span></li></a> -->
 		</ul>
 		</section>
 		<section class="student-responses">
