--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -36,7 +36,7 @@
 				}else{alert("Fail to retrieve data please signon");}
 			},
 			error: function(){
-				alert('There was an error adding your comment');
+				alert('There was an error adding your courses');
 			}
 		});
 	});
@@ -52,7 +52,7 @@
 		+questionItem.title+ "</div>" 
 		+"<div class='question-button'><button class='q-button' onclick='deleteQuestion("
 		+questionItem.questionID+")'>DELETE</button> " 
-		+"<button class='q-button-long'>VIEW RESPONSES</button> " 
+		+"<button class='q-button-long' onClick='window.location.href="+'"lecture-prepare-responses.html?questionID='+questionItem.questionID+'"'+"'>VIEW RESPONSES</button>" 
 		+"<button class='q-button'>EDIT</button></div></div>";
 	}
 	function addQuestion(){
@@ -143,7 +143,7 @@
 					questionID: questionID,
 				},
 				success:function(result){
-					alert(result);
+					//alert(result);
 					location.reload();
 
 				},
