--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -21,16 +21,14 @@
 	<!-- Questions -->
 	<section>
 		<!-- The question goes here, get id question -->
-		<h2 class="type-body-heading"> <span id="question-title">Draw My House</span> </h2>
+		<h2 class="question-body-heading"> <span id="question-title">testing questions that will be very long and take up more than 1 line to see what it would look like cool thanks</span> </h2>
 		<h3 class="type-body-url"> teamone.uqcloud.net ENTER CODE: <span id = "code"> 3fg </span></h3>
 
 		<!-- RESPONSE FILLER -->
 		<!-- This works by increasing the inner divs width, so grab
 		theme-response-inner and change the width accordinly -->
 		<div class="timer-div">
-			
 			<div class="theme-timer"> </div>
-			
 		</div>
 		<div class="theme-time2"><p>2 minutes</p> </div>
 		<div class="theme-time15"><p>1.5 minutes</p> </div>
