--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -98,7 +98,7 @@
     }
     function getQuestionItem(questionItem){ // input the question Object from JSON array, output a HTML List Item
       //"<p>Lecture</p>"+questionItem.quwstionWeek+
-      return	"<a href='drawing-app.html?questionID="+questionItem.questionID+"'><li> <span> "+questionItem.title+" </span></li></a>";
+      return	"<a href='drawing-app.html?questionID="+questionItem.questionID+"&questionTitle="+questionItem.title+"'><li> <span> "+questionItem.title+" </span></li></a>";
     }
 
 
