--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -38,7 +38,7 @@
 	    </div>
 	    <div id="question-container" class="closed">
 	    	<h1>Question:</h1>
-	    	<h2>QUESTION GOES HERE</h2>
+	    	<h2><span id="questionTitle"></span></h2>
 	    </div>
 
 	    <!-- Initial Loader -->
@@ -72,5 +72,6 @@
 	    	</div>
 	    </div>
 	</div>
+
 </body>
 </html>
