--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="../css/vendor/gridism.css">
   <!-- Sets it as a mobile viewport if the user is on a mobile device -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
 </head>
 
 <body class="bg-prepare">
@@ -54,23 +55,24 @@
   		 });
 
 			function addCourse(){
-				alert("Add Course");
-				document.getElementById("addButton").innerHTML ="<li><form id ='addSubjectForm' class='subject-form'><span>Course Code:<input style='width:30%;'type='text' name='courseID' maxlength='8'>" +
+				//alert("Add Course");
+				document.getElementById("addButton").innerHTML ="<li><form id ='addSubjectForm' class='subject-form'><span>Course Code:<input id='courseID' style='width:30%;'type='text' name='courseID' maxlength='8' data-inputmask='AAAA9999'>" +
 						"Year: <input style='width:10%;'  type='number' name='year' maxlength='2' value ='"+getCurrentYear()
 						+"'>Semester: <input style='width:10%;' type='number' name='semester'maxlength='1' value ='"+getCurrentSem()+"'><button onclick='submitCourse()'>Add</button></span></form></li>";
+
 			}
 		 function submitCourse(){//get data from the form
-			alert("submit course");
+			//alert("submit course");
 			 var courseCode = document.getElementsByName("courseID")[0].value;
 			 var year = document.getElementsByName("year")[0].value;
 			 var sem = document.getElementsByName("semester")[0].value;
 			 var postCourseCode = "";
 			 if(courseCode==""||year==""||sem==""){
-				 alert("Type something dude");
+				 alert("Please complete all fields");
 				}
 			 else{
 				 postCourseCode=postCourseCode.concat(courseCode,"-",year,"_",sem);
-				 alert(postCourseCode);
+				 //alert(postCourseCode);
 				 var url = "../uqDrawBackend/addCourse.php?courseID="+postCourseCode;
 				 var data ="";
 				 $.post(url,data,function(data, status){
