fix lists, hover over large questions to view full text

--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -10,11 +10,10 @@
 <body>
 	<!-- Header -->
 	<section>
-		<div class='header-l-lecture'>
-			<!-- Logo (small) -->
-			<a href="#"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' /></a>
-			<!-- Title of the page -->
-			<h3 class='type-title'> Lecture Questions </h3>
+		<div class="header-l-prepare">
+		<div class="headerpos">
+			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
+			</div>
 		</div>
 	</section>
 
