--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -88,7 +88,7 @@
 					<div class="question-button">
 					<button class="button"> Ask </button>
 					<button class="button"> Responses </button>
-					<div class="question">
+					</div>
 				</div>
 			</li>
 
