--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -174,56 +174,44 @@
 	</section>
 
 	<!-- Body -->
-	<section>
+		<!-- List the Questions -->
+	<section class = "list-make-green">
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> <span id="subject"> MATH 1061 </span>  CODE: <span id="code">3FC</span> </h2>
 		<!-- Body Subheading -->
 		<h3 class="type-body-subheading"> Click the plus button to create a new question </h3>
-		<!-- List the Questions -->
-		<ul class="list-make-green">
-			<span id="questionsList">
-			<label>Lecture 1</label>
-			<!-- Place PHP here, for each question in db, create a <li> element -->
-			<li> 
-				<div class="question-container">
-				<div class="question">
-					Question 1: Draw a house aaaaaaaaa aaaaaaa aaaaaa aaaaa aaa aaaaaa 
+
+		<ul><span id="questionsList">
+			<li>
+				<label> Lecture 1</label>
+				<div class="question-container"> 
+					<div class="question">
+					Draw my House Draw asaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaa
+					</div> 
+					<div class="question-button">
+					<button class="button"> Edit </button>
+					<button class="button"> Responses</button>
+					<button class="button"> Delete</button>
+					</div>
 				</div>
-				<div class="question-button">
-					<button class="make-button">Delete</button>
-					<button class="make-button-long">View Responses</button>
-					<button class="make-button">Edit</button> 
+
+			</li>
+
+			<li>
+				<label>Lecture 2</label>
+				<div class="question-container"> 
+					<div class="question">
+					Draw my House 
+					</div>
+					<div class="question-button">
+					<button class="button"> Edit </button>
+					<button class="button"> Responses</button>
+					<button class="button"> Delete</button>
+					</div>
 				</div>
 			</li>
 
-			<li> 
-				<div class="question-container">
-				<div class="question">
-					Question 2: Draw a house aaaaaaaaa aaaaaaa aaaaaa aaaaa aaa aaaaaa 
-				</div>
-				<div class="question-button">
-					<button class="make-button">Delete</button>
-					<button class="make-button-long">View Responses</button>
-					<button class="make-button">Edit</button> 
-				</div>
-			</li>
-
-			<li> 
-				<div class="question-container">
-				<div class="question">
-					Question 3: Draw a house a
-				</div>
-				<div class="question-button">
-					<button class="make-button">Delete</button>
-					<button class="make-button-long">View Responses</button>
-					<button class="make-button">Edit</button> 
-				</div>
-			</li>
-
-			
-			<!-- Create new question button -->
-			</span>
-		</ul>
+		</span></ul>
 			<ul id="addButton"><li onclick="addQuestion()"><button class="button-add">+</button></li></ul>
 	</section>
 
