someone didnt pull first

--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -20,7 +20,7 @@
 	<!-- Questions -->
 	<section>
 		<!-- The question goes here, get id question -->
-		<h2 class="type-body-heading"> <span id="question-title">Draw My House</span> </h2>
+		<h2 class="type-body-heading"> <span id="question-title">Draw My House House House House House House House House House House House House</span> </h2>
 		<h3 class="type-body-url"> teamone.uqcloud.net ENTER CODE: <span id = "code"> 3fg </span></h3>
 
 		<!-- RESPONSE FILLER -->
