--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -32,15 +32,15 @@
 			<div class="theme-timer"> </div>
 			
 		</div>
-		<div class="theme-time2"><p>2 minutes</p> </div>
-		<div class="theme-time15"><p>1.5 minutes</p> </div>
-		<div class="theme-time1"><p>1 minute</p> </div>
-		<div class="theme-time05"><p>30 seconds</p> </div>
+		<div class="theme-time2"><p>4 minutes</p> </div>
+		<div class="theme-time15"><p>3 minutes</p> </div>
+		<div class="theme-time1"><p>2 minutes</p> </div>
+		<div class="theme-time05"><p>1 minute</p> </div>
 		
 		<div class="theme-response-actions">
 			<!-- Enter PHP values in the spans -->
-			<h2> Responses <span id="responses">23</span> </h2>
-			<h2> Time: <span id="time-left"> 30 seconds </span></h2>
+			<!--<h2> Responses <span id="responses">23</span> </h2> -->
+			<h2> Time: <span id="time-left">04:00</span></h2>
 
 			<!-- Buttons -->
 			<button class="q-button-long" onclick="btnViewResponses()">View Responses</button>
@@ -85,5 +85,30 @@
 		function btnViewResponses(){
 			window.location.href = "../pages/lecture-responses.html?questionID="+getParameterByName("questionID")+"&courseID="+getParameterByName("courseID");
 		}
+
+	function startTimer(duration, display) {
+    	var timer = duration, minutes, seconds;
+    	setInterval(function () {
+        	minutes = parseInt(timer / 60, 10);
+        	seconds = parseInt(timer % 60, 10);
+
+        	minutes = minutes < 10 ? "0" + minutes : minutes;
+        	seconds = seconds < 10 ? "0" + seconds : seconds;
+
+        	display.text(minutes + ":" + seconds);
+
+        	if (--timer < 0) {
+            	timer = 0;
+            	btnEnd();
+        		}
+    		}, 1000);
+	}
+
+	jQuery(function ($) {
+    	var twoMinutes = 60 * 4,
+        display = $('#time-left');
+    startTimer(twoMinutes, display);
+});
+
 </script>
 </html>
