added question image to drawing app

--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -19,26 +19,25 @@
 <body class="special-body">
 	<div id="page">
 			
-
 		<!-- Header Bar -->
 		<div id="headers-top-bar">
-
 			<img src="../assets/images/topbar-logo.png"></img>
 			<button id="menu"><span></span><span></span></button>
 
 			<div class="input-group">
 				<button id="camera"> <i class="fa fa-camera"></i></button>
-				<input type="file" id="imageLoader" accept="image/*" title="camera" capture="camera">
-
-				
+				<input type="file" id="imageLoader" accept="image/*" title="camera" capture="camera">				
 			</div>
-			<button id="question"> Question </button>
-	    	<button id="submit"> Submit </button>
 
-	    </div>
+			<button id="question"> Question </button>
+	    <button id="submit"> Submit </button>
+	   </div>
+
 	    <div id="question-container" class="closed">
 	    	<h1>Question:</h1>
 	    	<h2><span id="questionTitle"></span></h2>
+	    	<button id="insert-into-canvas">INSERT IMAGE INTO CANVAS</button>
+	    	<img id="image-question" src="../assets/images/header.png" />
 	    </div>
 
 	    <!-- Initial Loader -->
