--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -177,7 +177,8 @@
 		<!-- List the Questions -->
 	<section class = "list-make-green">
 		<!-- Body Heading -->
-		<h2 class="type-body-heading"> <span id="subject"> MATH 1061 </span>  CODE: <span id="code">3FC</span> </h2>
+		<h2 class="type-body-heading"> <span id="subject"> MATH 1061</h2> </span> 
+		<h2> CODE: <span id="code">3FC</span> </h2>
 		<!-- Body Subheading -->
 		<h3 class="type-body-subheading"> Click the plus button to create a new question </h3>
 
