--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -19,11 +19,12 @@
     </div>
 
     <!-- Back button -->
-    <button class="drawing-app-back">Back</button>
+    <button class="drawing-app-back" onClick="window.location.href='http://teamone.uqcloud.net'">Back</button>
 
 	<section class="student-question">
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> <span id="subject">  </span>  CODE: <span id="code">3FC</span> </h2>
+    <h2 class="type-body-heading">Feedback Please - <a href="http://goo.gl/forms/CjTHoSM2pu">http://goo.gl/forms/CjTHoSM2pu</a></h2>
 		<!-- List the Questions -->
 		<ul class="student-list" >
 			<!-- Place PHP here, for each question in db, create a <li> element -->
