--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -20,8 +20,9 @@
 	<!-- Questions -->
 	<section>
 		<!-- The question goes here, get id question -->
-		<h2 class="type-body-heading"> <span id="question-title">Draw My House House House House House House House House House House House House</span> </h2>
-		<h3 class="type-body-url"> teamone.uqcloud.net ENTER CODE: <span id = "code"> 3fg </span></h3>
+		<h2 class="type-body-heading">Question: <span id="question-title">Draw My House House House House House House House House House House House House</span> </h2>
+		<h3 class="type-body-heading">URL: http://teamone.uqcloud.net 
+		<p>ENTER CODE: <span id = "code"> 3fg </span></h3>
 
 		<!-- RESPONSE FILLER -->
 		<!-- This works by increasing the inner divs width, so grab
@@ -44,7 +45,7 @@
 			<!-- Buttons -->
 			<button class="q-button-long" onclick="btnViewResponses()">View Responses</button>
 			<button class="q-button" onclick="btnEnd()">End</button>
-			<button class="q-button">Next</button>
+			<!---<button class="q-button">Next</button>-->
 		</div>
 	</section>
 
