back button in responses pages (lecture/prepare)
2 classes created (button-back-prepare-response)
(button-back-lecture-response)

--- a/pages/lecture-prepare-responses.html
+++ b/pages/lecture-prepare-responses.html
@@ -15,9 +15,11 @@
 
 	<section>
 		<div class="header-l-prepare">
+			<div class="button-back-prepare-response" onclick="btnBack()"> <p> Back </p></div>
+			<div class="headerpos">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
-			<h3 class="typography-l-h3"> Prepare Mode </h3>
-			<div class="button-goto-prepare" onclick="btnBack()"> <p> Back </p></div>
+			<h3 class="typography-l-h3"> Responses - Prepare Mode </h3>
+			</div>
 		</div>
 	</section>
 	<script>
