--- a/pages/lecture-responses.html
+++ b/pages/lecture-responses.html
@@ -95,10 +95,11 @@
 			,
 		render: function() {
 			return (
-				<div className="header-l-prepare">
+				<div className="header-l-lecture">
+					<a onClick={this.btnBack}><div className="button-back-lecture-response"> <p > Back </p></div></a>
+					<div className="headerpos">
 					<img className='images-l-subjects' src="../assets/images/topbar-logo.png" />
-					<h3 className="typography-l-h3"> Responses </h3>
-					<a onClick={this.btnBack}><div className="button-goto-prepare"> <p > Back </p></div></a>
+					<h3 className="typography-l-h3"> Responses </h3></div>
 				</div>
 				);
 		}
