--- a/index.html
+++ b/index.html
@@ -78,7 +78,14 @@
 	});
 
 	function getCourseItem(courseItem){ // add a <li> on the page// will be add a link after that page is finish
-		return	'<a href="pages/student-questions.html?courseID='+courseItem+'"><li> <span class="subject">'+courseItem+'</span> </lI></a>';
+		//start here//
+		var str = courseItem;
+    	var separators = [ '-',  '_', '\\\?'];
+    	var res  = str.split(new RegExp(separators.join('|'), 'g'));
+		var output = "Course ID: "+res[0]+", Year: "+res[1]+"', Semester: "+res[2];
+		return	'<a href="pages/student-questions.html?courseID='+output+'"><li> <span class="subject">'+output+'</span> </lI></a>';
+		//end here
+		//return	'<a href="pages/student-questions.html?courseID='+courseItem+'"><li> <span class="subject">'+courseItem+'</span> </lI></a>';
 	}
 	function forceLower(strInput)
 	{
