button style/ subject page/ prepare page

--- a/pages/lecture-subjects.html
+++ b/pages/lecture-subjects.html
@@ -16,7 +16,7 @@
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
 			</div>
 			<a href="lecture-prepare.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div></a>
-			<a href="lecture-mode.html"><div class="button-back-lecture"> <p> Back </p></div></a>
+			<a href="lecture-mode.html"><div class="button-back-lecture-response"> <p> Back </p></div></a>
 		</div>
 	</section>
 
