--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -21,7 +21,7 @@
 			<!-- Switch button -->
 			<a href='lecture-subjects.html'><div class='button-goto-lecture'> <p> goto Lecture Mode </p></div></a>
 			<!-- Switch button -->
-			<a href='lecture-mode.html'><div class='button-back-prepare'> <p> Back </p></div></a>
+			<a href='lecture-mode.html'><div class='button-back-prepare-response'> <p> Back </p></div></a>
 		</div>
 	</section>
 
