added multiple colours and graph

--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -37,7 +37,7 @@
 	    	<h1>Question:</h1>
 	    	<h2><span id="questionTitle"></span></h2>
 	    	<button id="insert-into-canvas">INSERT IMAGE INTO CANVAS</button>
-	    	<img id="image-question" src="../assets/images/header.png" />
+	    	<img id="image-question" src="../assets/images/graph.png" />
 	    </div>
 
 	    <!-- Initial Loader -->
@@ -52,22 +52,41 @@
 		<div id="tool-bar" class="closed">
 	    	<div class="element">
 	    		<h1>Colour</h1>
-	    		<div id="color-blue" class="color-selected"></div>
-	    		<div id="color-red"></div>
-	    		<div id="color-green"></div>
+	    		<div class="cont">
+	    			<div id="color-blue" class="color-selected"></div>
+	    			<div id="color-blue"></div>
+	    			<div id="color-blue"></div>
+	    			<div id="color-blue"></div>
+	    		</div>
+
+	    		<div class="cont">
+	    			<div id="color-blue" class="color-selected"></div>
+	    			<div id="color-blue"></div>
+	    			<div id="color-blue"></div>
+	    			<div id="color-blue"></div>
+	    		</div>
+
+	    		<div class="cont">
+	    			<div id="color-blue" class="color-selected"></div>
+	    			<div id="color-blue"></div>
+	    			<div id="color-blue"></div>
+	    			<div id="color-blue"></div>
+	    		</div>
+
+
 	    	</div>
 	    	<div class="element">
 	    		<h1>Size</h1>
-	    		<div id="size-small"><img class="circle-small" src="../assets/images/canvas/10by10.svg"></div>
-	    		<div id="size-medium" class="selected"><img class="circle-medium" src="../assets/images/canvas/20by20.svg"></div>
-	    		<div id="size-large"><img class="circle-large" src="../assets/images/canvas/30by30.svg"></div>
+	    		<div class="cont" id="size-small"><img class="circle-small" src="../assets/images/canvas/10by10.svg"></div>
+	    		<div class="cont" id="size-medium" class="selected"><img class="circle-medium" src="../assets/images/canvas/20by20.svg"></div>
+	    		<div class="cont" id="size-large"><img class="circle-large" src="../assets/images/canvas/30by30.svg"></div>
 	    		
 	    	</div>
 	    	<div class="element">
 	    		<h1>Tools</h1>
-	    		<div id="tool-1" class="selected"><i class="fa fa-pencil"></i></div>
-	    		<div id="tool-2"><i class="fa fa-eraser"></i></div>
-	    		<div id="tool-3"><p>Clear</p></div>
+	    		<div class="cont" id="tool-1" class="selected"><i class="fa fa-pencil"></i></div>
+	    		<div class="cont" id="tool-2"><i class="fa fa-eraser"></i></div>
+	    		<div class="cont" id="tool-3"><p>Clear</p></div>
 	    	</div>
 	    </div>
 	</div>
