added more colours

--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -52,25 +52,26 @@
 		<div id="tool-bar" class="closed">
 	    	<div class="element">
 	    		<h1>Colour</h1>
+	    		
 	    		<div class="cont">
-	    			<div id="color-blue" class="color-selected"></div>
+	    			<div id="color-red" class="color-selected"></div>
 	    			<div id="color-blue"></div>
-	    			<div id="color-blue"></div>
-	    			<div id="color-blue"></div>
+	    			<div id="color-green"></div>
+	    			<div id="color-yellow"></div>
 	    		</div>
 
 	    		<div class="cont">
-	    			<div id="color-blue" class="color-selected"></div>
-	    			<div id="color-blue"></div>
-	    			<div id="color-blue"></div>
-	    			<div id="color-blue"></div>
+	    			<div id="color-pumkin"></div>
+	    			<div id="color-orange"></div>
+	    			<div id="color-pink"></div>
+	    			<div id="color-purple"></div>
 	    		</div>
 
 	    		<div class="cont">
-	    			<div id="color-blue" class="color-selected"></div>
-	    			<div id="color-blue"></div>
-	    			<div id="color-blue"></div>
-	    			<div id="color-blue"></div>
+	    			<div id="color-silver"></div>
+	    			<div id="color-gray"></div>
+	    			<div id="color-white"></div>
+	    			<div id="color-black"></div>
 	    		</div>
 
 
