--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	$(document).ready(function() {
 		// disable the line under to test the pagg avoid redirect
 		//$("#start-username").load("pages/signon.php");//redirect to lecturer mode, if staff login
-		var courseID = "";
+
 		$.ajax({//get student course list from table Submissons, stdID will get from JSON, no need to POST anything
 			type: 'GET',
 			url: 'uqDrawBackend/retrieveStudentCourseList.php',//
@@ -82,8 +82,8 @@
 		var str = courseItem;
     	var separators = [ '-',  '_', '\\\?'];
     	var res  = str.split(new RegExp(separators.join('|'), 'g'));
-		var output = res[0]+" - Semester "+res[2]+", 20"+res[1];
-		return	'<a href="pages/student-questions.html?courseID='+courseItem+'"><li> <span class="subject">'+output+'</span> </lI></a>';
+		var output = res[0]+"', Semester "+res[2]+", 20"+res[1];
+		return	'<a href="pages/student-questions.html?courseID='+output+'><li> <span class="subject">'+output+'</span> </lI></a>';
 		//end here
 		//return	'<a href="pages/student-questions.html?courseID='+courseItem+'"><li> <span class="subject">'+courseItem+'</span> </lI></a>';
 	}
