--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 		var str = courseItem;
     	var separators = [ '-',  '_', '\\\?'];
     	var res  = str.split(new RegExp(separators.join('|'), 'g'));
-		var output = res[0]+"', Semester "+res[2]+", 20"+res[1];
-		return	'<a href="pages/student-questions.html?courseID='+output+'><li> <span class="subject">'+output+'</span> </lI></a>';
+		var output = res[0]+" - Semester "+res[2]+", 20"+res[1];
+		return	'<a href="pages/student-questions.html?courseID='+courseItem+'><li> <span class="subject">'+output+'</span> </lI></a>';
 		//end here
 		//return	'<a href="pages/student-questions.html?courseID='+courseItem+'"><li> <span class="subject">'+courseItem+'</span> </lI></a>';
 	}
