Fixed styling of forms

--- a/pages/lecture-mode.html
+++ b/pages/lecture-mode.html
@@ -25,8 +25,14 @@
 				<div class="unit half theme-lecture-mode">
 						<div class="type-lecture-mode">
 							<!-- Title -->
-							
+							<h2> Lecture Mode</h2>
 							<!-- Information -->
+							<div class="info">
+								<img src="../assets/images/bgicon-01.png" /> <p> Ask prepared questions</p>
+							</div>
+							<div class="info">
+								<img src="../assets/images/bgicon-02.png" /> <p> Review student responses</p>
+							</div>
 						</div>
 				</div>
 			</a>
@@ -37,8 +43,14 @@
 				<div class="unit half theme-prepare-mode">
 					<div class="type-prepare-mode">
 						<!-- Title -->
-						
+						<h2> Prepare Mode</h2>
 						<!-- Information -->
+						<div class="info">
+							<img src="../assets/images/bgicon-03.png" /> <p> Prepare lecture questions</p>
+						</div>
+						<div class="info">
+							<img src="../assets/images/bgicon-04.png" /> <p> Grade student responses</p>
+						</div>
 					</div>
 				</div>
 			</a>
