--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -94,8 +94,7 @@
 	</section>
 
 	<section class = "list-questions-purple">
-		<h2> <span id="subject">Subject 1</span></h2>
-		<h2>URL: http://teamone.uqcloud.net </h2>
+		<h2> <span id="subject">Subject 1</span> URL: http://teamone.uqcloud.net </h2>
 		<h2>Code: <span id="code"> 3FC </span> </h2>
 		<h3> Questions </h3>
 
